Adding new Template

--- a/mailer/mail-template/company-gitrepo-videostream-branch-login/otp.html
+++ b/mailer/mail-template/company-gitrepo-videostream-branch-login/otp.html
@@ -4,10 +4,8 @@
     </head>
     <body>
         <pre>
-            Hi,
-            Thank you for signing up for LoginApp. 
-            Please click on below link to complete the Signup process
-            {{singup_complete_link}}
+            Hi {{name}},
+            OTP for your latest Transaction is : {{otp}}
             
             Thanks
             LoginApp
